--- a/Tic-Tac-Toe/style.css
+++ b/Tic-Tac-Toe/style.css
@@ -3,23 +3,26 @@
 :root {
   --title-color: #fff;
   --text-color: hsl(235, 20%, 57%);
-  --shape-gradient: linear-gradient(90deg,
-                  hsl(300, 76%, 60%),
-                  hsl(57, 81%, 60%));
-  --body-gradient: linear-gradient(180deg,
-              hsl(22, 100%, 84%),
-              hsl(265, 100%, 80%));
+  --shape-gradient: linear-gradient(
+    90deg,
+    hsl(300, 76%, 60%),
+    hsl(57, 81%, 60%)
+  );
+  --body-gradient: linear-gradient(
+    180deg,
+    hsl(22, 100%, 84%),
+    hsl(265, 100%, 80%)
+  );
   --container-color: hsl(235, 32%, 10%);
   --body-font: "Poppins", sans-serif;
-  --biggest-font-size: 2rem;
-  --normal-font-size: 1rem;
+  --biggest-font-size: 2.3rem;
+  --normal-font-size: 1.65rem;
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
 
 body {
   height: 100vh;
@@ -399,10 +402,10 @@ a:active {
 }
 /* Animation shape */
 .card__article:hover .card__shape {
-    /* animation: shape-animate 0.8s 2 infinite; */
+  /* animation: shape-animate 0.8s 2 infinite; */
   animation-name: shape-animate;
-  animation-duration: 0.8s ;
-  animation-iteration-count: 2; 
+  animation-duration: 0.8s;
+  animation-iteration-count: 2;
 }
 
 @keyframes shape-animate {
@@ -498,7 +501,7 @@ a:active {
   animation-play-state: paused;
   opacity: 0;
   position: relative;
-  text-shadow: #fff var(--spacing) 0, #fff calc(var(--spacing) * -1) 0,
+  text-shadow: #ffffff var(--spacing) 0, #fff calc(var(--spacing) * -1) 0,
     #fff calc(var(--spacing) * -2) 0;
 }
 
@@ -554,19 +557,52 @@ a:active {
   grid-template-columns: 1fr 0.5fr 1fr;
   border-radius: 0.6rem;
   gap: 1rem;
+  position: relative;
+  z-index: 10;
+}
+.activePlayer {
+  position: absolute;
+  height: 107%;
+  width: 107%;
+  background-color: rgba(255, 255, 255, 0.625);
+  border: 2px solid black;
+  border-radius: 0.6rem;
+  z-index: 11;
 }
 .isXBox,
 .isYBox {
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: rgb(30, 124, 105);
+  border: 2px solid black;
   border-radius: 0.6rem;
   flex-direction: column;
   font-size: 2rem;
+  position: relative;
+  z-index: 4;
 }
 .middelBox {
   flex-direction: column;
   font-size: 1.3rem;
+}
+.playerActive {
+  position: absolute;
+
+  height: 108%;
+  top: -5px;
+  right: -5px;
+  background-color: rgb(208, 255, 0);
+  border: 2px solid black;
+  border-radius: 1rem;
+  z-index: 3;
+  transform: scale(0.4);
+  animation: activeModeAnimation 1.4s ease forwards;
+}
+
+@keyframes activeModeAnimation {
+  100% {
+    transform: scale(1);
+  }
 }
 .gameBoxCont {
   width: 100%;
@@ -584,8 +620,9 @@ a:active {
 .game-box-btn {
   width: 100%;
   height: 100%;
-  border: 1px solid rgba(195, 195, 195, 0.889);
-  background-color: rgba(0, 0, 0, 0.41);
+  /* border: 1px solid rgba(195, 195, 195, 0.889); */
+  border: 3px solid black;
+  background-color: rgba(1, 0, 87, 0.41);
   border-radius: 5px;
   font-size: 5rem;
   text-align: center;
@@ -612,29 +649,63 @@ a:active {
 
 .reset-bnt:hover {
   transform: translateY(-4px) translateX(-2px);
-  box-shadow: 2px 5px 0 0 rgb(255, 255, 255);
+  box-shadow: 2px 5px 0 0 rgba(14, 14, 14, 0.545);
 }
 
 .reset-bnt:active {
   transform: translateY(2px) translateX(1px);
-  box-shadow: 0 0 0 0 rgb(255, 255, 255);
+  box-shadow: 0 0 0 0 rgb(0, 0, 0);
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 900px){
+  .game-box-btn {
+    font-size: 4.2rem;
+  }
+}
+
+
+@media screen and (max-width: 631px) {
   .sidebar {
     display: none;
   }
+  .isXBox,.isYBox{
+    font-size: 1.3rem;
+  }
+  .scroeBox {
+    width: 20rem;
+    transition: all 2s;
+  }
+  .gameWrap {
+    width: 22rem;
+    height: 87%;
+    transition: all 2s;
+  }
 }
 @media screen and (max-width: 440px) {
-  .card__container{
-      width: 240px;
+  .card__container {
+    width: 240px;
+  }
+  .game-box-btn {
+    font-size: 3.78rem;
+  }
+  .card__img {
+    width: 160px;
+  }
+  .card__title {
+    font-size: 1.2rem;
+  }
+  .gameWrap {
+    width: 18rem;
+    height: 85%;
+  }
+  .scroeBox {
+    width: 302px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .gameWrap{
+    width: 17rem;
+    height: 80%;
   }
 
-.card__img {
-  width: 160px;
 }
-.card__title {
-  font-size: 1.2rem;
-}
-}
-
